--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="background-color:grey;">
     <table cellspacing="25">
         <tr>
-            <td> <img src="Images/Jitesh.png" alt="Jitesh Profile Picture" width="120" height="120"></td>
+            <td> <img src="Jitesh.png" alt="Jitesh Profile Picture" width="120" height="120"></td>
        
         
             <td><h1>Jitesh Pawar</h1>
