--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head> 
 
-<body style="background-color:grey;">
+<body style="background-color:lightcyan;">
     <table cellspacing="25">
         <tr>
             <td> <img src="Jitesh.png" alt="Jitesh Profile Picture" width="120" height="120"></td>
